--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,10 +1,12 @@
 <title>Dogs</title>
-<h1>These are my lovely dogs!</h1>
-<ul>
-  <% @dogs.each do |dog| %>
-    <li><%= link_to dog.name, dog_path(dog)  %> - <%= dog.motto %> </li>
-  <% end %>
-</ul>
+<div class="mydogs">
+  <h1>These are my lovely dogs!</h1>
+  <ul>
+    <% @dogs.each do |dog| %>
+      <li><%= link_to dog.name, dog_path(dog)  %> </li>
+    <% end %>
+  </ul>
+</div>
 <div class="dog">
   <div class="dog-body">
     <div class="dog-tail">
